need to fix more pictures big time

--- a/pages/docs_by/by_keyword.html
+++ b/pages/docs_by/by_keyword.html
@@ -63,7 +63,7 @@ layout: default
                 <br>health
                 <br>Indigenous peoples
                 <br>inheritance
-                <br>kinship
+                <br><a href="http://localhost:4000/keywords/pages/docs_by/by_keyword/kinship.md">kinship</a>
                 <br>labor
                 <br>marronage
                 <br>mobility
